# pcas

./: .gitmodules  CMakeLists.txt  README.md
include/pcas/: allocator.hpp  cache.hpp  defs.hpp  global_clock.hpp  global_ptr.hpp  local_ptr.hpp  mem_mapper.hpp  mem_obj.hpp  pcas.hpp  physical_mem.hpp  topology.hpp  util.hpp  virtual_mem.hpp
include/pcas/logger/: impl_dummy.hpp  impl_trace.hpp  kind.hpp  logger.hpp  policy_dummy.hpp  policy_trace.hpp
tests/: CMakeLists.txt  doctest.cpp  matmul.cpp
